--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-headernew></app-headernew>
 <app-spotter></app-spotter>
-<app-footernew></app-footernew>
+<div style="clear: both;"></div>
+<app-footer></app-footer>
